--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -3,7 +3,7 @@ html
   head
     link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.0.13/css/all.css", integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp",
     crossorigin="anonymous")
-    title Video-hosting
+    title #{siteName}
   body
     include ../partials/header
     main
