--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,9 +1,10 @@
 header.header
-  .header__column   
-    i.fab.fa-youtube
+  .header__column
+    a(href=routes.home)
+      i.fab.fa-youtube
   .header__column
     ul  
       li
-        a(href="#") Join
+        a(href=routes.join) Join
       li
-        a(href="#") Log in
+        a(href=routes.login) Log in
