--- a/views/home.pug
+++ b/views/home.pug
@@ -1,4 +1,11 @@
 extends layouts/main.pug
+include mixins/videoBlock
 
 block content
-  h2 Home Page
+  .videos
+    each video in videos
+      +videoBlock({
+        title: video.title,
+        views: video.views,
+        videoFile: video.videoFile
+      })
