--- a/views/join.pug
+++ b/views/join.pug
@@ -1,4 +1,11 @@
 extends layouts/main.pug
 
 block content
-  h2 Join
+  .form-container
+    form(action=routes.join, method="post")
+      input(type="name", name="name", placeholder="Full Name")
+      input(type="email", name="email", placeholder="Email")
+      input(type="password", name="password", placeholder="Password")
+      input(type="password2", name="password2", placeholder="Verify Password")
+      input(type="submit", value="Log In")
+    include partials/socialLogin
