--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -1,4 +1,10 @@
 extends layouts/main.pug
 
 block content
-  h2 Video Detail
+  .video__player
+    video(src=`${video.fileUrl}`) Edit Video
+  .video__info
+    a(href=routes.editVideo)
+    h5.video__title=video.title
+    span.video__views=video.views
+    p.video__description=video.description
