--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -2,9 +2,9 @@ extends layouts/main.pug
 
 block content
   .video__player
-    video(src=`${video.fileUrl}`) Edit Video
+    video(src=`/${video.fileUrl}`, controls=true) 
   .video__info
-    a(href=routes.editVideo)
+    a(href=routes.editVideo) Edit Video
     h5.video__title=video.title
     span.video__views=video.views
     p.video__description=video.description
