--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -3,9 +3,11 @@ html
   head
     link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.0.13/css/all.css", integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp",
     crossorigin="anonymous")
+    link(rel="stylesheet", href="static/styles.css")
     title #{pageTitle} | #{siteName}
   body
     include ../partials/header
     main
       block content
     include ../partials/footer
+    script(src="static/main.js")
