--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,13 +1,12 @@
 doctype html
 html
-  head
-    link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.0.13/css/all.css", integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp",
-    crossorigin="anonymous")
-    link(rel="stylesheet", href="static/styles.css")
-    title #{pageTitle} | #{siteName}
-  body
-    include ../partials/header
-    main
-      block content
-    include ../partials/footer
-    script(src="static/main.js")
+    head
+        link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU", crossorigin="anonymous")
+        title #{pageTitle} | #{siteName}
+        link(rel="stylesheet", href="/static/styles.css")
+    body
+        include ../partials/header
+        main
+            block content
+        include ../partials/footer
+        script(src="/static/main.js")
