--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -1,9 +1,9 @@
 .social-login
-  button
-    span.social-login--github
-      i.fab.fa-github
-    |Continue with Github
-  button
-    span.social-login--facebook
-      i.fab.fa-facebook
-    |Continue with Facebook
+    button.social-login--github
+        span
+            i.fab.fa-github 
+        |Continue with Github
+    button.social-login--facebook
+        span
+            i.fab.fa-facebook 
+        |Continue with Facebook
